[package]
name = "obs-biquad-filter-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obs-wrapper = "0.4.1"
# obs-wrapper = { path = "../rust-obs-plugins"}

[lib]
name = "biquadfilter"
crate-type = ["cdylib"]